--- a/assets/components/common/filter_form.html
+++ b/assets/components/common/filter_form.html
@@ -40,7 +40,7 @@
         </div>
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
-                <a type="submit" class="btn btn-primary btn-sm" ng-click="modal()">确定</a>
+                <a type="submit" class="btn btn-primary btn-sm" ng-click="getDataByFilter()">确定</a>
             </div>
         </div>
     </form>
