--- a/assets/sass/index.scss
+++ b/assets/sass/index.scss
@@ -9,8 +9,12 @@
 @import "components/order_list";
 //@import "components/common/menu";
 //公共样式 start
+.filter_form{
+  min-height: 350px;
+}
 
 //公共样式 end
+
 
 
 
