--- a/view/index/index.html
+++ b/view/index/index.html
@@ -30,14 +30,16 @@
     <script src="../../assets/lib/bootstrap-datetimepicker/js/bootstrap-datetimepicker.min.js"></script>
     <script src="../../assets/lib/bootstrap-datetimepicker/js/locales/bootstrap-datetimepicker.zh-CN.js"></script>
     <script src="../../assets/lib/bootstrap-treeview.js"></script>
+    <script src="../../assets/lib/bootstrap-notify.min.js"></script>
     <script src="../../assets/lib/placeholder/2.3.1/jquery.placeholder.min.js"></script>
     <link rel="stylesheet" href="../../assets/lib/bootstrap-datetimepicker/css/bootstrap-datetimepicker.min.css">
     <link rel="stylesheet" href="../../assets/lib/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../../assets/lib/animate.min.css">
     <link rel="stylesheet" href="../../assets/css/index.css">
     <style>
     </style>
 </head>
-<body ng-app="app" id=”ng-app” ng-cloak>
+<body ng-app="app" id="ng-app" ng-cloak>
     <div page-head ></div>
     <div page-menu ></div>
     <div ng-controller="index_controller" >
